Spawn scripts 'autodetects' if module java.se.ee is required